# distmedia

./: .gitignore  .gitmodules  README.md  docker-compose.yaml
compose/cluster0/: identity.json  service.json
compose/cluster0/pebble/: MANIFEST-000029  MANIFEST-000033  OPTIONS-000034
compose/ipfs0/: config
docker/python/: Dockerfile
projects/go/: go.mod  go.sum
projects/publisher/: .env  .gitignore  docker-compose.yaml  pyproject.toml
projects/publisher-ui/: index.html
projects/pubsub/: go.mod
projects/python/: .env  .gitignore  Dockerfile  install.sh  pyproject.toml
projects/python/app/: settings.py  urls.py  wsgi.py
projects/python/app/static/css/: styles.css
projects/python/app/static/js/: app.js
projects/python/app/templates/: index.html
projects/python/apps/articles/dataclass/: article.py
projects/python/apps/articles/management/commands/: __init__.py  generate_article.py
projects/python/apps/articles/serializers/: article.py
projects/python/apps/articles/service/: article.py
projects/python/apps/articles/views/: article.py
projects/python/apps/libs/encryption/: keys.py
projects/python/apps/libs/protocollabs_storage/: service.py
projects/python/apps/xrpl/dataclass/: account.py
projects/python/apps/xrpl/management/commands/: generate_nft.py  listen_xrp.py
projects/python/apps/xrpl/middleware/: account.py
projects/python/apps/xrpl/serializers/: account.py  subscription.py
projects/python/apps/xrpl/service/: __init__.py  superuser_xrpl.py  test.py  xrpl.py
projects/python/apps/xrpl/views/: account.py  subscription.py
(+79 files in other folders)
